[gd_scene load_steps=2 format=3 uid="uid://bnayc1ygl33w"]

[ext_resource type="Script" path="res://_data_definitions/weapon/weapon.gd" id="1_eaa4h"]

[node name="Weapon" type="Sprite2D"]
script = ExtResource("1_eaa4h")

[node name="AbilityOriginMarker" type="Marker2D" parent="."]

[node name="PrimaryAbilityContainer" type="Node" parent="."]

[node name="SecondaryAbilityContainer" type="Node" parent="."]
